Solución ejercicio básico 1 (https://ejercicios-de-lit-element.stackblitz.io/capitulo1)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <title>002 lit element basic component with bootstrap</title>
 </head>
 <body>
-  <basic-element name="Guzman" firstName="Guzmán" salary="Not enougth" country="Spain" Employee = true></basic-element>
+  <basic-element name="Guzman" age = 42 salary="Not enougth" country="Spain" Employee = true description = "Guzmán is a good, strong, tall, smart and modest person"></basic-element>
 </body>
 </html>
