Ejercicio con los extras

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <title>002 lit element basic component with bootstrap</title>
 </head>
 <body>
-  <basic-element name="Guzman" age = 42 salary="Not enougth" country="Spain" Employee = true description = "Guzmán is a good, strong, tall, smart and modest person"></basic-element>
+  <basic-element name="Guzman" age = 42 salary="Not enougth" country="Spain" Employee = true description = "Guzmán is a good, strong, tall, smart and modest person" panelType = "dark"></basic-element>
+  <basic-element name="Trini" age = 45 salary="Not enougth" country="Spain" Employee = true description = "She loves animals" panelType = "info"></basic-element>
+  <basic-element></basic-element>
 </body>
 </html>
